--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp/
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -10,32 +7,39 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
+.next/
+.next/cache/
+out/
+dist/
+build/
+.turbo/
+.vercel/
 
-# next.js
-/.next/
-/out/
+.env
+.env.*
+!.env.example
 
-# production
-/build
+coverage/
+*.lcov
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 .pnpm-debug.log*
+*.pid
+*.pid.lock
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
 *.tsbuildinfo
 next-env.d.ts
+
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+*.pem
