--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "^7.3.4",
     "@mui/system": "^7.3.3",
     "axios": "^1.13.1",
+    "chart.js": "^4.5.1",
     "next": "16.0.1",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.9.1",
