--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/material-nextjs": "^7.3.5",
     "@mui/system": "^7.3.3",
     "ai": "^5.0.86",
     "axios": "^1.13.1",
