--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ai": "^5.0.86",
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
