--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.9.1",
     "tsparticles-slim": "^2.12.0",
