--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.7.0",
     "baseline-browser-mapping": "^2.9.0",
+    "canvas": "^3.2.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "jsdom": "^27.0.1",
+    "happy-dom": "^20.0.11",
+    "jsdom": "^25.0.1",
     "typescript": "^5",
     "vitest": "^4.0.16"
   }
