--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-tsparticles": "^2.12.2",
@@ -38,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@vitejs/plugin-react": "^4.7.0",
     "baseline-browser-mapping": "^2.9.0",
     "canvas": "^3.2.0",
