--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "next lint",
+    "test:unit": "vitest",
+    "test:e2e": "playwright test --headed",
     "test": "vitest"
   },
   "dependencies": {
