--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,40 @@
-node_modules/
-.pnp/
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-.next/
-.next/cache/
-out/
-dist/
-build/
-.turbo/
-.vercel/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-.env
-.env.*
-!.env.example
+# testing
+/coverage
 
-coverage/
-*.lcov
+# next.js
+/.next/
+/out/
 
-logs/
-*.log
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-.pnpm-debug.log*
-*.pid
-*.pid.lock
+ts-debug.log*
 
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
 *.tsbuildinfo
 next-env.d.ts
 
-.vscode/
-.idea/
-*.swp
-*.swo
-.DS_Store
-Thumbs.db
-
-*.pem
-
-.env.local
-
-tsc_error_*.txt
-build_error_*.txt
-
-# Test Output
-test_output.txt
-
-*.txt
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
